# EpollProject

./: CMakeLists.txt
include/: epoll.h  socket.h
src/client/: client.cpp
src/common/: epoll.cpp  socket.cpp
src/server/: server.cpp
